# default-text-iqc

./: README.md  pyproject.toml  run_experiment.py
default-text-iqc/: generate_report_artifacts.py  report.md  robustness_rnn_experiment.py  run_ablation_suite.py  run_improvement_suite.py  sdp_rnn_demo.py
default-text-iqc/ablation_outputs/: summary.csv  summary.json
default-text-iqc/ablation_outputs/attack_aug_cap_0_80/: metrics.json  model.npz  vocab.json
default-text-iqc/ablation_outputs/cap_0_40/: metrics.json  model.npz
default-text-iqc/ablation_outputs/cap_0_60/: metrics.json
default-text-iqc/ablation_outputs/cap_0_80/: metrics.json  model.npz
default-text-iqc/ablation_outputs/cap_0_95/: metrics.json  model.npz
default-text-iqc/ablation_outputs/hidden_32_cap_0_80/: metrics.json  model.npz  vocab.json
default-text-iqc/ablation_outputs/hidden_96_cap_0_80/: metrics.json  model.npz
default-text-iqc/ablation_outputs/more_data_cap_0_80/: metrics.json  model.npz  vocab.json
default-text-iqc/ablation_outputs/noise_cap_0_80/: metrics.json  model.npz
default-text-iqc/improvement_outputs/: final_summary.csv  summary.csv  summary.json
default-text-iqc/report_artifacts/: example_predictions.md
default-text-iqc/sdp_outputs/: sdp_demo_result.json
ssm-extract-ufe-text/: README.md  pyproject.toml
ssm-extract-ufe-text/scripts/: extract_features.py  label_features.py  validate_dictionary.py
ssm-extract-ufe-text/src/ssm_extract_ufe_text/: __init__.py  analysis.py  config.py  corpus.py  dictionary.py  features.py  metrics.py  model.py  probing.py
ssm-extract-ufe-text/tests/: test_features.py  test_metrics.py  test_probing.py  test_visualization.py
ssm-extract-ufe-viz/: .gitignore  README.md  pyproject.toml
ssm-extract-ufe-viz/docs/: formal_definition.md
ssm-extract-ufe-viz/scripts/: aggregate_study.py  cross_layer_hierarchy.py  run_controls.py  run_demo_vim.py  run_imagenet_study.py  validate_dictionary.py
ssm-extract-ufe-viz/src/ssm_extract_ufe_viz/: __init__.py  analysis.py  config.py  controls.py  datasets.py  dictionary.py  differentiation.py  features.py  image_metrics.py  metrics.py  model.py  visualization.py
ssm-extract-ufe-viz/tests/: test_analysis.py  test_controls.py  test_datasets.py  test_dictionary.py  test_differentiation.py  test_distance.py  test_features.py  test_image_metrics.py  test_metrics.py  test_model_visualization.py  test_visualization_aug.py
ssm-low-rank-svd/: .gitignore  README.md  ssm_model.py  tasks.py
ssm-low-rank-svd/tests/: test_ssm.py
ssm-robust-text/: readme.md  run_experiments.ipynb
ssm-robust-text/src/: perturbations.py
(+29 files in other folders)
