[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssm-svd-compression"
version = "0.1.0"
description = "SVD low-rank compression of HiPPO SSM state matrices — experiment and analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "scipy>=1.12", "matplotlib>=3.8", "pytest>=8.0"]

[project.scripts]
ssm-run = "run_experiment:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ssm_model", "tasks"]
omit = ["run_experiment.py", "tests/*"]

[tool.coverage.report]
show_missing = true
