[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssm-extract-ufe-text"
version = "0.1.0"
description = "Feature interpretability and differentiation framework for Mamba SSMs"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch>=2.6.0,<3.0.0",
    "transformers>=4.39.0",
    "datasets>=2.18.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "pytest>=9.0.0",
]

[project.optional-dependencies]
gpu = [
    "causal-conv1d>=1.4.0",
    "mamba-ssm>=1.2.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: requires downloading pretrained model weights (~500 MB)",
]
